fix admin-tools svg on ie

--- a/workspace/utilities/admin-tools/admin-tools.css
+++ b/workspace/utilities/admin-tools/admin-tools.css
@@ -54,5 +54,12 @@
 
 .admin-tools .widget-svg{
 	width: 15px;
+	height: 15px;
 	margin-right: 5px;
+}
+
+.admin-tools .widget-svg svg {
+	display: block;
+	width: 100%;
+	height: 100%;
 }
